Feat: add drag and drop to cards

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         </div>
 
         <div class="kanban-cards">
-          <div class="kanban-card dragging" draggable="true">
+          <div class="kanban-card" draggable="true">
             <div class="badge hight">
               <span>Alta prioridade</span>
             </div>
@@ -57,19 +57,19 @@
       <!--Coluna 2-->
       <div class="kanban-column" data-id="2">
         <div class="kanban-title">
-          <h2>Frontend</h2>
+          <h2>Em andamento</h2>
           <button class="add-card">
             <i class="fa-solid fa-plus"></i>
           </button>
         </div>
 
         <div class="kanban-cards">
-          <div class="kanban-card dragging" draggable="true">
+          <div class="kanban-card" draggable="true">
             <div class="badge medium">
-              <span>Alta prioridade</span>
+              <span>Média prioridade</span>
             </div>
 
-            <p class="card-title">Revisar projeto</p>
+            <p class="card-title">Projetar layout</p>
 
             <div class="card-infos">
               <div class="card-icons">
@@ -95,19 +95,19 @@
       <!--Coluna 3-->
       <div class="kanban-column" data-id="3">
         <div class="kanban-title">
-          <h2>Backend</h2>
+          <h2>Últimos ajustes</h2>
           <button class="add-card">
             <i class="fa-solid fa-plus"></i>
           </button>
         </div>
 
         <div class="kanban-cards">
-          <div class="kanban-card dragging" draggable="true">
+          <div class="kanban-card" draggable="true">
             <div class="badge low">
-              <span>Alta prioridade</span>
+              <span>Baixa prioridade</span>
             </div>
 
-            <p class="card-title">Revisar projeto</p>
+            <p class="card-title">Conectar banco de dados</p>
 
             <div class="card-infos">
               <div class="card-icons">
@@ -140,12 +140,14 @@
         </div>
 
         <div class="kanban-cards">
-          <div class="kanban-card dragging" draggable="true">
+          <div class="kanban-card" draggable="true">
             <div class="badge hight">
-              <span>Alta prioridade</span>
+              <span>Baixa prioridade</span>
             </div>
 
-            <p class="card-title">Revisar projeto</p>
+            <p class="card-title">
+              Testar projeto e enviar o que precisa ser alterado
+            </p>
 
             <div class="card-infos">
               <div class="card-icons">
@@ -178,7 +180,7 @@
         </div>
 
         <div class="kanban-cards">
-          <div class="kanban-card dragging" draggable="true">
+          <div class="kanban-card" draggable="true">
             <div class="badge hight">
               <span>Alta prioridade</span>
             </div>
